k8-deployment-files/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: python-qrcode
spec:
  selector:
    matchLabels:
      app: python-qrcode
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: python-qrcode
    spec:
      containers:
      - name: python-qrcode
        image: localhost:5000/python-qrcode:v1
        ports:
        - containerPort: 5000
