k8-deployment-files/all-in-one.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: python-qrcode
spec:
  selector:
    matchLabels:
      app: python-qrcode
  replicas: 1 # tells deployment to run 2 pods matching the template
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: python-qrcode
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: python-qrcode
        image: snehkacr.azurecr.io/python-qrcode:v1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: pythonapp-svc
  labels:
    app: python-qrcode
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: python-qrcode
