k8-deployment-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythonapp-svc
  labels:
    app: python-qrcode
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: python-qrcode
