k8-deployment-files/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pythonapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  backend:
    serviceName: pythonapp-svc
    servicePort: 80
  rules:
  - host: qrcode.snehangshu-akskube.info
    http:
      paths:
      - path: /
        backend:
          serviceName: pythonapp-svc
          servicePort: 80
